fix(agenda): show less columns for agenda editing on mobile devices

--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -59,8 +59,15 @@
     }
 }
 
-
 @media (max-width: 768px) {
+
+    /* Hides the specified columns in edit mode on mobile */
+    .edit-mode-active #logs-table .col-no,
+    .edit-mode-active #logs-table .col-designation,
+    .edit-mode-active #logs-table .col-duration-min {
+        display: none;
+    }
+
     .container-wrapper {
         display: block;
     }
